@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2008-2012, 2014 by Walter Brisken                             *
+ *   Copyright (C) 2008-2012, 2014, 2015 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
